# 3DViewer_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  readme.html  resourses.qrc  test_qt.cpp
src/view/: style.qss
